--- a/Scoring_MGDP/Views/ClasifProveedores/Create.cshtml
+++ b/Scoring_MGDP/Views/ClasifProveedores/Create.cshtml
@@ -20,7 +20,7 @@
 
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-5">
-                    <input type="submit" value="Crear" class="btn btn-primary" id="approve-btn" />
+                    <input type="submit" value="Crearlooo" class="btn btn-primary" id="approve-btn" />
                 </div>
             </div>
         </div>
