--- a/Scoring_MGDP/Views/Proveedores/Create.cshtml
+++ b/Scoring_MGDP/Views/Proveedores/Create.cshtml
@@ -1,78 +1,79 @@
-﻿@model Scoring_MGDPData.Proveedores
+﻿@model Scoring_MGDP.ViewModel.ProveedorViewModel
 
     <div class="modal-content">
         
         @using (Html.BeginForm("Create", "Proveedores", FormMethod.Post))
             {
                 @Html.AntiForgeryToken()
+    <div class="form-horizontal">
+        <h4 align="center">Actualizar proveedor</h4>
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.Id)
 
-                <div class="form-horizontal">
-                    <br />
-                    <h4 align="center">Crear nuevo proveedor</h4>
-                    <hr/>
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.NombreProv, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-5">
-                            @Html.EditorFor(model => model.NombreProv, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.NombreProv, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.NombreProveedor, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-5">
+                @Html.EditorFor(model => model.NombreProveedor, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.NombreProveedor, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.id_ClasificacionProv, "Clasificación", htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-5">
-                            @Html.DropDownList("id_ClasificacionProv", null, htmlAttributes: new { @class = "form-control" })
-                            @Html.ValidationMessageFor(model => model.id_ClasificacionProv, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.ClasifProveedoresViewModel, "Clasificación", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-5">
+                @Html.DropDownListFor(m => m.ClasifProveedorId, Model.ClasificacionesProveedores as SelectList, "Seleccionar", htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.ClasifProveedoresViewModel, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.EsAM, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-5">
-                            @Html.DropDownList("EsAM", ViewBag.YesNoList as SelectList, htmlAttributes: new { @class = "form-control" })
-                            @Html.ValidationMessageFor(model => model.EsAM, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.AM, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-5">
+                @Html.DropDownListFor(m => m.AM, Model.AMList as SelectList, "Seleccionar", htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.AM, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.ModeloImplementado, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-5">
-                            @Html.DropDownList("ModeloImplementado", ViewBag.YesNoList as SelectList, htmlAttributes: new { @class = "form-control" })
-                            @Html.ValidationMessageFor(model => model.ModeloImplementado, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.ModeloImplementado, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-5">
+                @Html.DropDownListFor(m => m.ModeloImplementado, Model.ModeloImplementadoList as SelectList, "Seleccionar", htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.ModeloImplementado, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.NombreProvCompras, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-5">
-                            @Html.EditorFor(model => model.NombreProvCompras, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.NombreProvCompras, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.NombreCompras, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-5">
+                @Html.EditorFor(model => model.NombreCompras, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.NombreCompras, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.Gestion, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-5">
-                            @Html.EditorFor(model => model.Gestion, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Gestion, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Gestion, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-5">
+                @Html.EditorFor(model => model.Gestion, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Gestion, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.Vigente, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-5">
-                            @Html.DropDownList("Vigente", ViewBag.YesNoList as SelectList, htmlAttributes: new { @class = "form-control" })
-                            @Html.ValidationMessageFor(model => model.Vigente, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Vigente, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-5">
+                @Html.DropDownListFor(m => m.Vigente, Model.VigenteList as SelectList, "Seleccionar", htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Vigente, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
-                    <div class="form-group">
-                        <div class="col-md-offset-2 col-md-5">
-                            <input type="submit" value="Crear" class="btn btn-primary" id="approve-btn" />
-                            @*@Html.ActionLink("Cancelar", "Index", "Proveedores", null, new { @class = "btn btn-danger" })*@
-                        </div>
-                    </div>
-                </div>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-5">
+                <input type="submit" value="Guardar" class="btn btn-primary" id="approve-btn" />
+            </div>
+        </div>
+    </div>
+
             }
 <br />
     </div>
