--- a/Scoring_MGDP/Views/Proveedores/Edit.cshtml
+++ b/Scoring_MGDP/Views/Proveedores/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Scoring_MGDPData.Proveedores
+﻿@model Scoring_MGDP.ViewModel.ProveedorViewModel
 
 
 <div class="modal-content">
@@ -11,45 +11,45 @@
             <h4 align="center">Actualizar proveedor</h4>
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            @Html.HiddenFor(model => model.id_Proveedor)
+            @Html.HiddenFor(model => model.Id)
 
             <div class="form-group">
-                @Html.LabelFor(model => model.NombreProv, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.NombreProveedor, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-5">
-                    @Html.EditorFor(model => model.NombreProv, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.NombreProv, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.NombreProveedor, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.NombreProveedor, "", new { @class = "text-danger" })
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.id_ClasificacionProv, "Clasificación", htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.ClasifProveedoresViewModel, "Clasificación", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-5">
-                    @Html.DropDownList("id_ClasificacionProv", null, htmlAttributes: new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.id_ClasificacionProv, "", new { @class = "text-danger" })
+                    @Html.DropDownListFor(m => m.ClasifProveedorId, Model.ClasificacionesProveedores as SelectList, "Seleccionar", htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.ClasifProveedoresViewModel, "", new { @class = "text-danger" })
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.EsAM, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.AM, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-5">
-                    @Html.DropDownList("EsAM", ViewBag.YesNoList as SelectList, htmlAttributes: new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.EsAM, "", new { @class = "text-danger" })
+                    @Html.DropDownListFor(m => m.AM, Model.AMList as SelectList, "Seleccionar", htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.AM, "", new { @class = "text-danger" })
                 </div>
             </div>
 
             <div class="form-group">
                 @Html.LabelFor(model => model.ModeloImplementado, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-5">
-                    @Html.DropDownList("ModeloImplementado", ViewBag.YesNoList as SelectList, htmlAttributes: new { @class = "form-control" })
+                    @Html.DropDownListFor(m => m.ModeloImplementado, Model.ModeloImplementadoList as SelectList, "Seleccionar", htmlAttributes: new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.ModeloImplementado, "", new { @class = "text-danger" })
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.NombreProvCompras, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.NombreCompras, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-5">
-                    @Html.EditorFor(model => model.NombreProvCompras, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.NombreProvCompras, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.NombreCompras, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.NombreCompras, "", new { @class = "text-danger" })
                 </div>
             </div>
 
@@ -64,7 +64,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Vigente, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-5">
-                    @Html.DropDownList("Vigente", ViewBag.YesNoList as SelectList, htmlAttributes: new { @class = "form-control" })
+                    @Html.DropDownListFor(m => m.Vigente, Model.VigenteList as SelectList, "Seleccionar", htmlAttributes: new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.Vigente, "", new { @class = "text-danger" })
                 </div>
             </div>
