--- a/Scoring_MGDP/Views/Home/Index.cshtml
+++ b/Scoring_MGDP/Views/Home/Index.cshtml
@@ -10,19 +10,18 @@
     <br />
 </div>
     <div class="col-sm-12 text-center" style="background: white;">
-        <h1 class="azul">Web de scoring y MGDP</h1>
+        <h1 class="azul">Web de scoring y MGD</h1>
     </div>
 
     <div class="col-md-12 bg-default" style="background: white;">
         <p style="text-align:center">
-            <a type="button" class="btn btn-primary btn-lg " href="../TableroCalidad">Tablero<br />Scoring Prueba</a>&nbsp;&nbsp;&nbsp;
+            @*<a type="button" class="btn btn-primary btn-lg " href="../TableroCalidad">Tablero<br />Scoring Prueba</a>&nbsp;&nbsp;&nbsp;
             <a type="button" class="btn btn-info btn-lg" href="../">Tablero<br />Modelo de Gestión de Proveedores</a>&nbsp;&nbsp;&nbsp;
             <a type="button" class="btn btn-warning btn-lg" href="../Proveedores">Carga<br />Métricas</a>&nbsp;&nbsp;&nbsp;
-            <a type="button" class="btn btn-warning btn-lg" href="../Proveedores">Configuración<br />Entidades</a>
-            <h2>gestión de proveedores</h2>
-        <p>texto de ejemplo</p>
+            <a type="button" class="btn btn-warning btn-lg" href="../Proveedores">Configuración<br />Entidades</a>*@
+            <h2>Ver si poner accesos rápidos o no</h2>
+        @*<p>texto de ejemplo</p>
         <p>@Html.ActionLink("Proveedores", "Index", "Proveedores")</p>
-        <p> @Html.ActionLink("Editar", "Edit", new { id = 1 }, new { @class = "btn btn-primary btn-xs" }) |</p>
-        </p>
+        <p> @Html.ActionLink("Editar", "Edit", new { id = 1 }, new { @class = "btn btn-primary btn-xs" }) |</p>*@
     </div>
 
