--- a/Scoring_MGDP/Views/ClasifProveedores/Edit.cshtml
+++ b/Scoring_MGDP/Views/ClasifProveedores/Edit.cshtml
@@ -7,30 +7,30 @@
         @Html.AntiForgeryToken()
 
         <div class="form-horizontal">
-            <h4>ClasificacionesProv</h4>
+            <h4 align="center">Actualizar clasificación</h4>
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             @Html.HiddenFor(model => model.Id)
 
             <div class="form-group">
-                @Html.LabelFor(model => model.ClasificacionProv, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
+                @Html.LabelFor(model => model.ClasificacionProv, htmlAttributes: new { @class = "control-label col-md-3" })
+                <div class="col-md-7">
                     @Html.EditorFor(model => model.ClasificacionProv, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.ClasificacionProv, "", new { @class = "text-danger" })
                 </div>
             </div>
 
             <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
+                <div class="col-md-offset-10 col-md-10">
                     <input type="submit" value="Guardar" class="btn btn-primary" id="approve-btn"/>
                 </div>
             </div>
         </div>
     }
 
-    <div>
+    @*<div>
         @Html.ActionLink("Back to List", "Index")
-    </div>
+    </div>*@
 
 </div>
 
