--- a/Scoring_MGDP/Views/Proveedores/Create.cshtml
+++ b/Scoring_MGDP/Views/Proveedores/Create.cshtml
@@ -6,76 +6,75 @@
             {
                 @Html.AntiForgeryToken()
     <div class="form-horizontal">
-        <h4 align="center">Actualizar proveedor</h4>
+        <h4 align="center">Nuevo Proveedor</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.NombreProveedor, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-5">
+            @Html.LabelFor(model => model.NombreProveedor, htmlAttributes: new { @class = "control-label col-md-3" })
+            <div class="col-md-7">
                 @Html.EditorFor(model => model.NombreProveedor, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.NombreProveedor, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ClasifProveedoresViewModel, "Clasificación", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-5">
+            @Html.LabelFor(model => model.ClasifProveedoresViewModel, "Clasificación", htmlAttributes: new { @class = "control-label col-md-3" })
+            <div class="col-md-7">
                 @Html.DropDownListFor(m => m.ClasifProveedorId, Model.ClasificacionesProveedores as SelectList, "Seleccionar", htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ClasifProveedoresViewModel, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.AM, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-5">
+            @Html.LabelFor(model => model.AM, htmlAttributes: new { @class = "control-label col-md-3" })
+            <div class="col-md-7">
                 @Html.DropDownListFor(m => m.AM, Model.AMList as SelectList, "Seleccionar", htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.AM, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ModeloImplementado, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-5">
+            @Html.LabelFor(model => model.ModeloImplementado, htmlAttributes: new { @class = "control-label col-md-3" })
+            <div class="col-md-7">
                 @Html.DropDownListFor(m => m.ModeloImplementado, Model.ModeloImplementadoList as SelectList, "Seleccionar", htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ModeloImplementado, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.NombreCompras, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-5">
+            @Html.LabelFor(model => model.NombreCompras, htmlAttributes: new { @class = "control-label col-md-3" })
+            <div class="col-md-7">
                 @Html.EditorFor(model => model.NombreCompras, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.NombreCompras, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Gestion, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-5">
+            @Html.LabelFor(model => model.Gestion, htmlAttributes: new { @class = "control-label col-md-3" })
+            <div class="col-md-7">
                 @Html.EditorFor(model => model.Gestion, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Gestion, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Vigente, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-5">
+            @Html.LabelFor(model => model.Vigente, htmlAttributes: new { @class = "control-label col-md-3" })
+            <div class="col-md-7">
                 @Html.DropDownListFor(m => m.Vigente, Model.VigenteList as SelectList, "Seleccionar", htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Vigente, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-5">
-                <input type="submit" value="Guardar" class="btn btn-primary" id="approve-btn" />
+            <div class="col-md-offset-10 col-md-5">
+                <input type="submit" value="Crear" class="btn btn-primary" id="approve-btn" />
             </div>
         </div>
     </div>
 
             }
-<br />
     </div>
 
 
