--- a/Scoring_MGDP/Views/Proveedores/Index.cshtml
+++ b/Scoring_MGDP/Views/Proveedores/Index.cshtml
@@ -10,8 +10,8 @@
         <br />
         <br />
         <br />
-        <br />
 
+        <h3 align="center">Proveedores</h3> 
         <p>
             @Html.ActionLink("Nuevo proveedor", "Create", "Proveedores", null, new { @class = "modal-link btn btn-primary" })
         </p>
