--- a/Scoring_MGDP/Views/Proveedores/Create.cshtml
+++ b/Scoring_MGDP/Views/Proveedores/Create.cshtml
@@ -14,7 +14,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.NombreProveedor, htmlAttributes: new { @class = "control-label col-md-3" })
             <div class="col-md-7">
-                @Html.EditorFor(model => model.NombreProveedor, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.NombreProveedor, new { htmlAttributes = new { @class = "form-control", required = "required" } })
                 @Html.ValidationMessageFor(model => model.NombreProveedor, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -22,7 +22,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ClasifProveedoresViewModel, "Clasificación", htmlAttributes: new { @class = "control-label col-md-3" })
             <div class="col-md-7">
-                @Html.DropDownListFor(m => m.ClasifProveedorId, Model.ClasificacionesProveedores as SelectList, "Seleccionar", htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownListFor(m => m.ClasifProveedorId, Model.ClasificacionesProveedores as SelectList, "Seleccionar", htmlAttributes: new { @class = "form-control", required = "required" })
                 @Html.ValidationMessageFor(model => model.ClasifProveedoresViewModel, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -30,7 +30,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.AM, htmlAttributes: new { @class = "control-label col-md-3" })
             <div class="col-md-7">
-                @Html.DropDownListFor(m => m.AM, Model.AMList as SelectList, "Seleccionar", htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownListFor(m => m.AM, Model.AMList as SelectList, "Seleccionar", htmlAttributes: new { @class = "form-control", required = "required" })
                 @Html.ValidationMessageFor(model => model.AM, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -38,7 +38,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ModeloImplementado, htmlAttributes: new { @class = "control-label col-md-3" })
             <div class="col-md-7">
-                @Html.DropDownListFor(m => m.ModeloImplementado, Model.ModeloImplementadoList as SelectList, "Seleccionar", htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownListFor(m => m.ModeloImplementado, Model.ModeloImplementadoList as SelectList, "Seleccionar", htmlAttributes: new { @class = "form-control", required = "required" })
                 @Html.ValidationMessageFor(model => model.ModeloImplementado, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -54,7 +54,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Gestion, htmlAttributes: new { @class = "control-label col-md-3" })
             <div class="col-md-7">
-                @Html.EditorFor(model => model.Gestion, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Gestion, new { htmlAttributes = new { @class = "form-control", required = "required" } })
                 @Html.ValidationMessageFor(model => model.Gestion, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -62,7 +62,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Vigente, htmlAttributes: new { @class = "control-label col-md-3" })
             <div class="col-md-7">
-                @Html.DropDownListFor(m => m.Vigente, Model.VigenteList as SelectList, "Seleccionar", htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownListFor(m => m.Vigente, Model.VigenteList as SelectList, "Seleccionar", htmlAttributes: new { @class = "form-control", required = "required" })
                 @Html.ValidationMessageFor(model => model.Vigente, "", new { @class = "text-danger" })
             </div>
         </div>
