--- a/Scoring_MGDP/Views/Proveedores/Index.cshtml
+++ b/Scoring_MGDP/Views/Proveedores/Index.cshtml
@@ -11,7 +11,7 @@
         <br />
         <br />
 
-        <h3 align="center">Proveedores</h3> 
+        <h2 class="azul sombraTexto textoCentro">Proveedores</h2> 
         <p>
             @Html.ActionLink("Nuevo proveedor", "Create", "Proveedores", null, new { @class = "modal-link btn btn-primary" })
         </p>
