Nuevos ABM: Tipo de métrica y Unidades de medida

--- a/Scoring_MGDP/Views/Shared/_Layout.cshtml
+++ b/Scoring_MGDP/Views/Shared/_Layout.cshtml
@@ -162,13 +162,13 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="@Url.Action("", "")">
-                                            Nuevo3
+                                        <a href="@Url.Action("Index", "UnidadesMedidas")">
+                                            Unidades de medidas
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="@Url.Action("Index", "Proveedores")">
-                                            Proveedores
+                                        <a href="@Url.Action("Index", "TiposMetricas")">
+                                            Tipos de métricas
                                         </a>
                                     </li>
                                 </ul>
