Nueva pantalla contrato proveedores (relacionada con proveedores) No funciona por ningún lado

--- a/Scoring_MGDP/Views/Shared/_Layout.cshtml
+++ b/Scoring_MGDP/Views/Shared/_Layout.cshtml
@@ -157,8 +157,8 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="@Url.Action("", "")">
-                                            Nuevo2
+                                        <a href="@Url.Action("Index", "ContratoProv")">
+                                            Contratos de proveedores
                                         </a>
                                     </li>
                                     <li>
