--- a/Scoring_MGDP/Views/ContratoProv/Edit.cshtml
+++ b/Scoring_MGDP/Views/ContratoProv/Edit.cshtml
@@ -23,7 +23,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.ProveedorViewModel, "Proveedor", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.DropDownListFor(m => m.IdProveedor, Model.Proveedores as SelectList, "Seleccionar", htmlAttributes: new { @class = "form-control", required = "required" })
+                    @Html.DropDownListFor(m => m.IdProveedor, Model.ProveedoresList as SelectList, "Seleccionar", htmlAttributes: new { @class = "form-control", required = "required" })
                     @Html.ValidationMessageFor(model => model.ProveedorViewModel, "", new { @class = "text-danger" })
                 </div>
             </div>
