Pantalla Metricas y ajustes en Contratos Proveedores

--- a/Scoring_MGDP/Views/Shared/_Layout.cshtml
+++ b/Scoring_MGDP/Views/Shared/_Layout.cshtml
@@ -152,8 +152,8 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="@Url.Action("", "")">
-                                            Nuevo
+                                        <a href="@Url.Action("Index", "Metricas")">
+                                            Catálogo de métricas
                                         </a>
                                     </li>
                                     <li>
