Antes de refrescar el modelo del entity

--- a/Scoring_MGDP/Views/Shared/_Layout.cshtml
+++ b/Scoring_MGDP/Views/Shared/_Layout.cshtml
@@ -187,13 +187,13 @@
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li>
-                                        <a href="@Url.Action("", "")">
-                                            Pesos 1
+                                        <a href="@Url.Action("Index", "ScoringConfigFrentes")">
+                                            Pesos Frentes
                                         </a>
                                     </li>
                                     <li>
                                         <a href="@Url.Action("", "")">
-                                            Pesos 2
+                                            Pesos Medidas
                                         </a>
                                     </li>
                                 </ul>
