--- a/Scoring_MGDP/Views/Metricas/Create.cshtml
+++ b/Scoring_MGDP/Views/Metricas/Create.cshtml
@@ -10,13 +10,13 @@
             <h4 align="center">Nueva Métrica</h4>
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="form-group">
+            @*<div class="form-group">
                 @Html.LabelFor(model => model.IdMetrica, htmlAttributes: new { @class = "control-label col-md-3" })
                 <div class="col-md-7">
                     @Html.EditorFor(model => model.IdMetrica, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.IdMetrica, "", new { @class = "text-danger" })
                 </div>
-            </div>
+            </div>*@
 
             <div class="form-group">
                 @Html.LabelFor(model => model.Sigla, htmlAttributes: new { @class = "control-label col-md-3" })
