--- a/Scoring_MGDP/Views/ScoringConfigFrentes/Delete.cshtml
+++ b/Scoring_MGDP/Views/ScoringConfigFrentes/Delete.cshtml
@@ -1,64 +1,65 @@
-﻿@model Scoring_MGDPData.Scoring_Configuracion
+﻿@model Scoring_MGDP.ViewModel.ScoringConfigFrentesViewModel
 
-@{
-    Layout = null;
-}
 
-<!DOCTYPE html>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Delete</title>
-</head>
-<body>
-    <h3>Are you sure you want to delete this?</h3>
-    <div>
-        <h4>Scoring_Configuracion</h4>
-        <hr />
-        <dl class="dl-horizontal">
-            <dt>
-                @Html.DisplayNameFor(model => model.Metrica)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.Metrica)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.Peso)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.Peso)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.Ambito)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.Ambito)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.Tipo)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.Tipo)
-            </dd>
-    
-        </dl>
-    
-        @using (Html.BeginForm()) {
-            @Html.AntiForgeryToken()
-    
-            <div class="form-actions no-color">
-                <input type="submit" value="Delete" class="btn btn-default" /> |
-                @Html.ActionLink("Back to List", "Index")
-            </div>
-        }
+    <div class="modal-content">
+        <h4 align="center">¿Está seguro de eliminar este frente?</h4>
+        <div>
+            <hr />
+            <dl class="dl-horizontal">
+                <dt>
+                    @Html.DisplayNameFor(model => model.Metrica)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.Metrica)
+                </dd>
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.Peso)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.Peso)
+                </dd>
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.Ambito)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.Ambito)
+                </dd>
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.Tipo)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.Tipo)
+                </dd>
+
+            </dl>
+
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
+                <div class="form-group">
+                    <div class="col-md-offset-10 col-md-5">
+                        <input type="submit" value="Borrar" class="btn btn-primary" id="approve-btn" />
+                        <br />
+                        <br />
+                    </div>
+                </div>
+                <br />
+            }
+        </div>
     </div>
-</body>
-</html>
+
+    <script type="text/javascript">
+    $(function () {
+        $('#approve-btn').click(function () {
+            $('#modal-container').modal('hide');
+        });
+    });
+    </script>
