--- a/Scoring_MGDP/Views/ScoringConfigMedidas/Create.cshtml
+++ b/Scoring_MGDP/Views/ScoringConfigMedidas/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Scoring_MGDP.ViewModel.ScoringConfigFrentesViewModel
+﻿@model Scoring_MGDP.ViewModel.ScoringConfigMedidasViewModel
 
 <div class="modal-content">
 
@@ -7,7 +7,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-horizontal">
-            <h4 align="center">Nuevo Frente</h4>
+            <h4 align="center">Nueva Medida</h4>
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
