--- a/Scoring_MGDP/Views/Shared/_Layout.cshtml
+++ b/Scoring_MGDP/Views/Shared/_Layout.cshtml
@@ -192,7 +192,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="@Url.Action("", "")">
+                                        <a href="@Url.Action("Index", "ScoringConfigMedidas")">
                                             Pesos Medidas
                                         </a>
                                     </li>
