--- a/Scoring_MGDP/Views/Shared/_Layout.cshtml
+++ b/Scoring_MGDP/Views/Shared/_Layout.cshtml
@@ -153,6 +153,11 @@
                                             Carga de métricas
                                         </a>
                                     </li>
+                                    <li>
+                                        <a href="@Url.Action("Index", "DefMetricas")">
+                                            Definición Metrica
+                                        </a>
+                                    </li>                                    
                                 </ul>
                             </li>
                             <li class="dropdown">
